# MUSE

./: AUTHORS.txt  CMakeLists.txt  COPYING.txt  CTestConfig.cmake  ChangeLog.txt  INSTALL.txt  README.md
config/: CTestCustom.cmake.in  Components.cmake  Config.cmake.in  ConfigSettings.cmake  ConfigUse.cmake.in  ConfigVersion.cmake.in  FindANTS.cmake  Package.cmake  ScriptConfig.cmake.in  Settings.cmake
data/: CMakeLists.txt
data/List/: MUSE-SS_ROIs.csv  MUSE_ROI.csv  ROIs.lst  ROIs_153.lst  SubjectList.txt
doc/: CMakeLists.txt  about.rst  changelog.rst  download.rst  index.rst  installation.rst  manual.rst  people.rst  publications.rst
src/: CMakeLists.txt  IOZhan.c  IOZhan.h  calculateSimilarityMap.c  cres.c  cres.h  general.h  imageZHAN.c  imageZHAN.h  matrixZHAN.c  matrixZHAN.h  muse-ants-registrations.sh.in  muse-calculateSimilarityMap.sh.in  muse-calculateVolumes.py  muse-combine1ROI.sh.in  muse-combineAll.sh.in  muse-combineRoiMapsIter.py  muse-dramms-registrations.sh.in  muse-functions.sh.in  muse-labelFusion.sh.in  muse.sh.in  mvcd.c  queue.c  queue.h  watershed.c  watershed.h
src/schedulerSettings/: CMakeLists.txt  SettingsMISC.sh  SettingsPBS.sh  SettingsSGE.sh
test/: CMakeLists.txt
test/internal/: CMakeLists.txt
